Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_kycadviento.yml
+++ b/.github/workflows/main_kycadviento.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -56,5 +56,5 @@ jobs:
         with:
           app-name: 'kycadviento'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_16DD51A0D2D24937A31E8A0BEB696C44 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3F163F1663AE4FD4B0E6C65EAB43D575 }}
           package: .
